package ru.sectorsj.springcourse;

public interface CameraRoll {

    void processing();
}
